#109 filter ci workflow using paths

--- a/.github/workflows/generator.yml
+++ b/.github/workflows/generator.yml
@@ -4,6 +4,10 @@ name: Generator
 
 on:
   push:
+    paths:
+    - 'scripts/templates/**'
+    - 'scripts/gen_module.sh'
+    - '.github/workflows/generator.yml'
 
 jobs:
   test:
