--- a/.github/workflows/generator.yml
+++ b/.github/workflows/generator.yml
@@ -33,7 +33,7 @@ jobs:
     - name: Setup Python
       uses: actions/setup-python@v2
 
-    - name: Install dependencies
+    - name: Install Python dependencies
       run: |
         python -m pip install --upgrade pip
         pip install j2cli[yaml]
