--- a/scripts/templates/values.yaml
+++ b/scripts/templates/values.yaml
@@ -62,16 +62,24 @@ aggregation: true
 transformation: true
 
 ## @param filtering - string - optional
-## Determine base filtering added only to {{rules.severity}} with 
-## {{metric}} defined (not used for {{formula}}).
+## Determine base filtering added only to signals of type "metric" (not 
+## used for "formula" type).
 ## It will define a `base_filtering` variable at start of signalflow 
-## programm then use it in `filter` parameter of `data()` function.
+## program then use it in `filter` parameter of `data()` function.
 #
 ## Should be a valid `filter` object, see:
 ## https://dev.splunk.com/observability/docs/signalflow/functions/filter_function/
 #
 #filtering: "filter('primary_aggregation_type', 'true')"
 filtering:
+
+## @param exclude_not_running_vm - bool - optional
+## In addition to base filtering from signalflow variable we have preset 
+## filters from a terraform local which exclude all not running vms from 
+## cloud providers. 
+## This is often useful for heartbeat detectors, especially based on 
+## metrics coming from the agent (to avoid false positive at downscale).
+exclude_not_running_vm: 
 
 ## @param signals - object - mandatory
 ## List of signals of the detector. Attribute key is the {{signal_label}} 
@@ -102,6 +110,14 @@ signals:
     ## https://dev.splunk.com/observability/docs/signalflow/function_method_list
     #
     formula:
+
+    ## @param extrapolation - string - optional
+    ## The extrapolation policy to use in "data()" function (so it works for 
+    ## signals of type "metric" only, see: 
+    ## https://dev.splunk.com/observability/docs/signalflow/functions/data_function/
+    ## Note defining `extrapolation: null` is the same that do not define it at all.
+    #
+    extrapolation:
 
 ## @param rules - object - mandatory
 ## List of rules assigned to this detector. Attribute key is the {{severity}}.
