--- a/.github/workflows/doc.yml
+++ b/.github/workflows/doc.yml
@@ -40,3 +40,13 @@ jobs:
     - name: Check for changes
       run: git diff --exit-code
 
+  spellcheck:
+    runs-on: ubuntu-latest
+
+    steps:
+    - name: Checkout
+      uses: actions/checkout@v2
+
+    - name: Run PySpelling
+      uses: sbates130272/spellcheck-github-actions@v0.7.0
+
