--- a/.github/workflows/doc.yml
+++ b/.github/workflows/doc.yml
@@ -50,3 +50,12 @@ jobs:
     - name: Run PySpelling
       uses: sbates130272/spellcheck-github-actions@v0.7.0
 
+  dead-links:
+    runs-on: ubuntu-latest
+
+    steps:
+    - name: Checkout
+      uses: actions/checkout@v2
+
+    - name: Check dead links in Markdown
+      uses: gaurav-nelson/github-action-markdown-link-check@v1
