Templating: Add unit on detectors messages #207

--- a/modules/smart-agent_system-common/conf/01-cpu.yaml
+++ b/modules/smart-agent_system-common/conf/01-cpu.yaml
@@ -10,7 +10,9 @@ rules:
   critical:
     threshold: 90
     comparator: ">"
+    unit: "%"
   major:
     threshold: 85
     comparator: ">"
     dependency: critical
+    unit: "%"
