--- a/modules/smart-agent_system-common/conf/03-space.yaml
+++ b/modules/smart-agent_system-common/conf/03-space.yaml
@@ -9,7 +9,9 @@ rules:
   critical:
     threshold: 90
     comparator: ">"
+    unit: "%"
   major:
     threshold: 80
     comparator: ">"
     dependency: critical
+    unit: "%"
