--- a/modules/smart-agent_system-common/conf/03-space.yaml
+++ b/modules/smart-agent_system-common/conf/03-space.yaml
@@ -2,6 +2,7 @@ module: system
 name: "disk space utilization"
 id: disk_space
 transformation: ".max(over='5m')"
+value_unit: "%"
 signals:
   signal:
     metric: disk.utilization
@@ -9,9 +10,7 @@ rules:
   critical:
     threshold: 90
     comparator: ">"
-    unit: "%"
   major:
     threshold: 80
     comparator: ">"
     dependency: critical
-    unit: "%"
