--- a/modules/smart-agent_system-common/conf/04-inodes.yaml
+++ b/modules/smart-agent_system-common/conf/04-inodes.yaml
@@ -2,6 +2,7 @@ module: system
 name: "disk inodes utilization"
 id: disk_inodes
 transformation: ".max(over='5m')"
+value_unit: "%"
 signals:
   signal:
     metric: percent_inodes.used
