--- a/modules/smart-agent_system-common/conf/05-mem.yaml
+++ b/modules/smart-agent_system-common/conf/05-mem.yaml
@@ -2,6 +2,7 @@ module: system
 name: "memory utilization"
 id: memory
 transformation: ".min(over='5m')"
+value_unit: "%"
 signals:
   signal:
     metric: memory.utilization
@@ -9,9 +10,7 @@ rules:
   critical:
     threshold: 95
     comparator: ">"
-    unit: "%"
   major:
     threshold: 90
     comparator: ">"
     dependency: critical
-    unit: "%"
