--- a/scripts/templates/values.yaml
+++ b/scripts/templates/values.yaml
@@ -133,10 +133,18 @@ signals:
     ## @param extrapolation - string - optional
     ## The extrapolation policy to use in "data()" function (so it works for 
     ## signals of type "metric" only, see: 
-    ## https://dev.splunk.com/observability/docs/signalflow/functions/data_function/
+    ## https://dev.splunk.com/observability/docs/signalflow/functions/data_function/)
     ## Note defining `extrapolation: null` is the same that do not define it at all.
     #
     extrapolation:
+
+    ## @param rollup - string - optional
+    ## The rollup policy to use in "data()" function (so it works for
+    ## signals of type "metric" only, see:
+    ## https://dev.splunk.com/observability/docs/signalflow/functions/data_function/)
+    ## Note defining `rollup: null` is the same that do not define it at all.
+    #
+    rollup:
 
 ## @param rules - object - mandatory
 ## List of rules assigned to this detector. Attribute key is the {{severity}}.
