--- a/modules/smart-agent_solr/conf/readme.yaml
+++ b/modules/smart-agent_solr/conf/readme.yaml
@@ -6,7 +6,7 @@ documentations:
 
 source_doc: |
   Check the [integration 
-  documentation](https://docs.signalfx.com/en/latest/integrations/integrations-reference/integrations.solr.html) 
+  documentation](https://docs.signalfx.com/en/latest/integrations/integrations-reference/integrations.apache.solr.html) 
   in addition to the monitor one which it uses.
 
   ### Monitors
