#123 Update modules/integration_azure-event-hub/conf/01-capacity-throttling.yaml
Co-authored-by: Spi <BzSpi@users.noreply.github.com>

--- a/modules/integration_azure-event-hub/conf/01-capacity-throttling.yaml
+++ b/modules/integration_azure-event-hub/conf/01-capacity-throttling.yaml
@@ -4,7 +4,7 @@ module: "Azure Event Hub"
 name: "throttled requests"
 filtering: "filter('resource_type', 'Microsoft.EventHub/clusters') and filter('primary_aggregation_type', 'true')"
 aggregation: ".mean(by=['azure_resource_name', 'azure_resource_group_name', 'azure_region'])"
-transformation: ".max(over='15m')"
+transformation: ".min(over='15m')"
 signals:
   A:
     metric: ThrottledRequests
