--- a/modules/integration_azure-event-hub/conf/01-capacity-throttling.yaml
+++ b/modules/integration_azure-event-hub/conf/01-capacity-throttling.yaml
@@ -5,6 +5,7 @@ name: "throttled requests"
 filtering: "filter('resource_type', 'Microsoft.EventHub/clusters') and filter('primary_aggregation_type', 'true')"
 aggregation: ".mean(by=['azure_resource_name', 'azure_resource_group_name', 'azure_region'])"
 transformation: ".min(over='15m')"
+value_unit: "%"
 signals:
   A:
     metric: ThrottledRequests
@@ -14,10 +15,18 @@ signals:
     formula: "(A/B).scale(100).fill(0)"
 rules:
   critical:
-    threshold: 90
+    threshold: 50
     comparator: ">"
   major:
-    threshold: 80
+    threshold: 30
     comparator: ">"
     dependency: critical
+  minor:
+    threshold: 10
+    comparator: ">"
+    dependency: major
+  warning:
+    threshold: 1
+    comparator: ">"
+    dependency: minor
 ...
