#203 bunch of makefile improvements
- toc is now a full separate target to use only when we want to check the entire repo
- so readmes target is simply dropped and doc becomes the target to gen modules readmes/doc
- all modules related target can now accept an argument which is a filter to limit the scope of execution. If no arg is provided the filter is "*" which correspond to all directories in `/modules`, else it will use it as filter for bash files expansion (so you can use either a full directory name like `make detectors smart-agent_system-common` or a wildcard based pattern like `make detectors *system*`).
- outputs target is now run AFTER detectors target to ensure outputs is always up to date and avoid to run it again
- new modules target allows to run all modules related targets in once to ease contribution (detectors, outputs, doc)
- the module target used to bootstrap a new module now also create the conf directory along with a its empty/minimal readme yaml config
- ci has been updated to support these changes
- doc has been updated with makefile improvements

--- a/.github/workflows/doc.yml
+++ b/.github/workflows/doc.yml
@@ -34,8 +34,8 @@ jobs:
     - name: Checkout
       uses: actions/checkout@v2
 
-    - name: Generate modules readmes
-      run: make readmes
+    - name: Generate modules doc
+      run: make doc
 
     - name: Check for changes
       run: git diff --exit-code
