#203 breaking change: rework make targets naming
- all targets now start with an "action" (init, check, update..)
- targets are now long (but bash completion is installed on the dev env)
- it produces an human understanding sentence (update module doc)
- targets for deadlinks and spell checks added
- the special target update-module add the check-module one to get a
  full ready PR
- CI and doc updated

--- a/.github/workflows/doc.yml
+++ b/.github/workflows/doc.yml
@@ -35,7 +35,7 @@ jobs:
       uses: actions/checkout@v2
 
     - name: Generate modules doc
-      run: make doc
+      run: make update-module-doc
 
     - name: Check for changes
       run: git diff --exit-code
