--- a/modules/smart-agent_cassandra/conf/readme.yaml
+++ b/modules/smart-agent_cassandra/conf/readme.yaml
@@ -34,7 +34,8 @@ source_doc: |
 
   ### JMX
 
-  This module uses the common Java runtime metrics for every JVM based applications.
+  This module uses the [Cassandra](https://cassandra.apache.org/doc/latest/operating/metrics.html) 
+  specific metrics.
 
   You must [enable JMX 
   Remote](https://docs.datastax.com/en/cassandra-oss/2.1/cassandra/security/secureJmxAuthentication.html) 
