--- a/modules/smart-agent_tomcat/conf/readme.yaml
+++ b/modules/smart-agent_tomcat/conf/readme.yaml
@@ -24,7 +24,8 @@ source_doc: |
 
   ### JMX
 
-  This module uses the common Java runtime metrics for every JVM based applications.
+  This module uses the [Tomcat](https://cwiki.apache.org/confluence/display/TOMCAT/Monitoring) 
+  specific metrics.
 
   You must [enable JMX Remote](https://tomcat.apache.org/tomcat-7.0-doc/monitoring.html#Enabling_JMX_Remote) 
   on your `tomcat` server(s).
