Improve severity doc
- support TOC in update-severity-doc
- safe sort for consistent results outside the container
- replace detectors list by severity matrix
- update all modules

--- a/.spellcheck.yaml
+++ b/.spellcheck.yaml
@@ -12,7 +12,7 @@ matrix:
   - pyspelling.filters.html:
   sources:
   - '*.md'
-  - 'docs/**/*.md'
+  - 'docs/**/*.md|!docs/severity.md'
   - 'scripts/**/*.md'
   - 'examples/**/*.md'
   default_encoding: utf-8
