[229] Detector for oom & disk-write-queue

--- a/modules/smart-agent_couchbase/conf/01-memory-used.yaml
+++ b/modules/smart-agent_couchbase/conf/01-memory-used.yaml
@@ -1,5 +1,5 @@
 module: smart-agent_couchbase
-name: "Check Memory"
+name: "Memory Used"
 aggregation: true
 transformation: ".min(over='15m')"
 value_unit: "%"
