--- a/modules/smart-agent_couchbase/conf/03-disk-write-queue.yaml
+++ b/modules/smart-agent_couchbase/conf/03-disk-write-queue.yaml
@@ -1,8 +1,9 @@
-module: smart-agent_couchbase
+module: Couchbase
 name: "Disk Write Queue"
 aggregation: true
 transformation: ".min(over='15m')"
 signals:
+  signal:
     metric: "gauge.bucket.op.disk_write_queue"
 rules:
   critical:
@@ -13,4 +14,4 @@ rules:
     threshold: 200
     comparator: ">"
     dependency: critical
-    escription: "Disk write queue is big"
+    description: "Disk write queue is big"
