--- a/modules/smart-agent_kubernetes-common/conf/readme.yaml
+++ b/modules/smart-agent_kubernetes-common/conf/readme.yaml
@@ -125,3 +125,8 @@ notes: |
   * it works only on job running from cronjob
   * this will obviously raise an alert when a job is considered as failed from kubernetes point of view. Indeed, some pods could eventually fail or retry without to mark the job as failed
   * but the alert will remain until you clean/purge jobs history. Indeed, even if a new, more recent, successful job has been running in the meantime the alert will continue until you delete the failed job
+
+  ### About `oom_killed` detector
+
+  * default transformation function is used to avoid the detector to flap repeatedly
+  * if unset, expect the detector to send several alerts per minute
