--- a/modules/integration_azure-storage-account/conf/06-requests-rate-status.yaml
+++ b/modules/integration_azure-storage-account/conf/06-requests-rate-status.yaml
@@ -1,16 +1,17 @@
 module: "Azure Storage Account"
 name: "requests rate status"
+filtering: "filter('resource_type', 'Microsoft.Storage/storageAccounts') and filter('primary_aggregation_type', 'true')"
 aggregation: ".sum(by=['azure_resource_name', 'azure_resource_group_name', 'azure_region'])"
 transformation: ".min(over='5m')"
 signals:
   rate_success:
     metric: "Transactions"
-    filtering: "filter('resource_type', 'Microsoft.Storage/storageAccounts') and filter('responsetype', 'Success') and filter('primary_aggregation_type', 'true')"
+    filter: "filter('responsetype', 'Success')"
     rollup: sum
   rate_failed:
     metric: "Transactions"
     rollup: sum
-    filtering: "filter('resource_type', 'Microsoft.Storage/storageAccounts') and not filter('responsetype', 'Success') and filter('primary_aggregation_type', 'true')"
+    filter: "not filter('responsetype', 'Success')"
   signal:
     formula:
       (rate_failed/(rate_success+rate_failed)).scale(100).fill(0)
