fixing rollup part based on azure monitor graph

--- a/modules/integration_azure-storage-account/conf/03-ingress.yaml
+++ b/modules/integration_azure-storage-account/conf/03-ingress.yaml
@@ -7,7 +7,7 @@ value_unit: "Gbps"
 signals:
   ingress:
     metric: "Ingress"
-    rollup: rate
+    rollup: sum
   signal:
     formula:
       ingress.scale(0.000000008) # Scale to Gb unit
