--- a/modules/integration_azure-storage-account/conf/05-requests-rate.yaml
+++ b/modules/integration_azure-storage-account/conf/05-requests-rate.yaml
@@ -6,7 +6,7 @@ transformation: ".min(over='15m')"
 signals:
   signal:
     metric: "Transactions"
-    rollup: rate
+    rollup: sum
 rules:
   critical:
     threshold: 19000
