--- a/scripts/templates/values.yaml
+++ b/scripts/templates/values.yaml
@@ -11,27 +11,27 @@
 ## Use "-" as separator, no spaces or underscores.
 ## Aims to be passed from env var by script or cli.
 #
-module: 
+module:
 
 ## @param id - string - optional
 ## Detector id (shorter canonical name).
 ## Used as prefix for terraform variables, resources and outputs names.
 #
 ## If not defined it will result in lower {{name}} with spaces replaced by `_`.
-## This is why this is highly recommended to explicitly set {{id}} if 
+## This is why this is highly recommended to explicitly set {{id}} if
 ## {{name}} is too long or use special chars like `()`.
 #
 ## Aims to be passed from env var by script or cli.
 #
-id: 
+id:
 
 ## @param name - string - mandatory
 ## Detector entire readable name (what it checks).
 ## Used after {{module}} for alert subject and as prefix for variables.
 #
-## The name will determine the detector type to create. If equals to 
+## The name will determine the detector type to create. If equals to
 ## "heartbeat", it will use "not_reporting.detector()" function and add
-## "max_delay=900". Else, it writes threshold detector type using 
+## "max_delay=900". Else, it writes threshold detector type using
 ## "detect()" function. The rendered alert subject will be:
 ## `[{{ rules.severity }}][tfenv] {{ module }} {{ name }} (XX {{comparator}} {{threshold}) on` ..
 #
@@ -41,9 +41,9 @@ id:
 name:
 
 ## @param aggregation - string/bool - optional - default: true
-## Determine aggregation function added only to {{rules.severity}} with 
+## Determine aggregation function added only to {{rules.severity}} with
 ## {{metric}} defined (not used for {{formula}}).
-## If set as bool to true (the default) it declares an empty aggregation 
+## If set as bool to true (the default) it declares an empty aggregation
 ## variable but if set as string it defines the "default" of this variable.
 ## If set as bool to false, it does not declare or use any variable.
 #
@@ -51,10 +51,10 @@ name:
 aggregation: true
 
 ## @param transformation - string - optional - defaut: true
-## Determine aggregation function added only to {{rules.severity}} with 
+## Determine aggregation function added only to {{rules.severity}} with
 ## {{metric}} defined (not used for {{formula}}).
 ## By default or set to true (bool), it uses an empty string variable.
-## If set as bool to true (the default) it declares an empty aggregation 
+## If set as bool to true (the default) it declares an empty aggregation
 ## variable but if set as string it defines the "default" of this variable.
 ## If set as bool to false, it does not declare or use any variable.
 #
@@ -62,9 +62,9 @@ aggregation: true
 transformation: true
 
 ## @param filtering - string - optional
-## Determine base filtering added only to signals of type "metric" (not 
+## Determine base filtering added only to signals of type "metric" (not
 ## used for "formula" type).
-## It will define a `base_filtering` variable at start of signalflow 
+## It will define a `base_filtering` variable at start of signalflow
 ## program then use it in `filter` parameter of `data()` function.
 #
 ## Should be a valid `filter` object, see:
@@ -74,10 +74,10 @@ transformation: true
 filtering:
 
 ## @param exclude_not_running_vm - bool - optional
-## In addition to base filtering from signalflow variable we have preset 
-## filters from a terraform local which exclude all not running vms from 
-## cloud providers. 
-## This is often useful for heartbeat detectors, especially based on 
+## In addition to base filtering from signalflow variable we have preset
+## filters from a terraform local which exclude all not running vms from
+## cloud providers.
+## This is often useful for heartbeat detectors, especially based on
 ## metrics coming from the agent (to avoid false positive at downscale).
 exclude_not_running_vm:
 
@@ -89,23 +89,28 @@ value_unit:
 ## @param runbook_url - string - optional
 ## Define a default runbook_url for all rules of the detector, see:
 ## https://docs.signalfx.com/en/latest/detect-alert/set-up-detectors.html#runbook
-## If not defined, an empty string will be used as variable to allow the 
+## If not defined, an empty string will be used as variable to allow the
 ## use to set its custom one.
-runbook_url: 
+runbook_url:
 
 ## @param tip - string - optional
 ## Define a default tip for all rules of the detector, see:
 ## https://docs.signalfx.com/en/latest/detect-alert/set-up-detectors.html#tip
-## If not defined, an empty string will be used as variable to allow the 
+## If not defined, an empty string will be used as variable to allow the
 ## use to set its custom one.
-tip: 
+tip:
+
+## @param disabled - bool - optional
+## Allows to disable all alerting rules defined in this detector
+## Only works if set to `true`.
+disabled:
 
 ## @param signals - object - mandatory
-## List of signals of the detector. Attribute key is the {{signal_label}} 
+## List of signals of the detector. Attribute key is the {{signal_label}}
 ## used in signalflow programm.
 ## The last attribute (by convention "signal") is shown on the detector
 ## chart and used to define alert rules.
-## Before it, optional not published  signals could be defined (by 
+## Before it, optional not published  signals could be defined (by
 ## convention A, B, C, ..) to use them into the last "signal" as formula.
 #
 signals:
@@ -124,7 +129,7 @@ signals:
     metric:
 
     ## @param formula - string - optional
-    ## The signalflow formula which could use previous signals and 
+    ## The signalflow formula which could use previous signals and
     ## analytics functions and methods, see:
     ## https://dev.splunk.com/observability/docs/signalflow/function_method_list
     #
@@ -132,7 +137,7 @@ signals:
 
     ## @param filter - string - optional
     ## The additional filter in "data()" function (so it works for
-    ## signals of type "metric" only, see: 
+    ## signals of type "metric" only, see:
     ## https://dev.splunk.com/observability/docs/signalflow/functions/data_function/)
     ## Note defining `filter: null` is the same that do not define it at all.
     #
@@ -163,7 +168,7 @@ rules:
   ## The severity: https://docs.signalfx.com/en/latest/detect-alert/set-up-detectors.html#severity
   ## Used as label to publish alerts depending on the detector type like "detect()"
   ## block for "threshold" detector type.
-  # 
+  #
   #info:
   #warning:
   #minor:
@@ -172,9 +177,9 @@ rules:
   severity:
 
     ## @param threshold - number - optional
-    ## The threshold value for this severity alert rule used in "when()" 
+    ## The threshold value for this severity alert rule used in "when()"
     ## function to create the condition.
-    ## Required for "threshold" detector type" only. 
+    ## Required for "threshold" detector type" only.
     threshold:
 
     ## @param comparator - string - optional
@@ -185,7 +190,7 @@ rules:
     comparator:
 
     ## @param description - string - optional
-    ## The custom description to set for this rule. If not defined, it will 
+    ## The custom description to set for this rule. If not defined, it will
     ## fill the default generic description based on threshold comparison
     ## like: "is too low < " / "is too high >" / "is !=" / "is ==".
     #description:
