enhance readmes for k8s common, velero and ingress

--- a/modules/smart-agent_kubernetes-common/conf/readme.yaml
+++ b/modules/smart-agent_kubernetes-common/conf/readme.yaml
@@ -3,6 +3,8 @@ documentations:
     url: 'https://docs.signalfx.com/en/latest/integrations/agent/monitors/kubernetes-cluster.html'
   - name: Smart Agent monitor kubelet-stats
     url: 'https://docs.signalfx.com/en/latest/integrations/agent/monitors/kubelet-stats.html'
+  - name: Smart Agent monitor kubelet-metrics
+    url: 'https://docs.signalfx.com/en/latest/integrations/agent/monitors/kubelet-metrics.html'
 
 source_doc: |
   ### Agent
@@ -16,7 +18,8 @@ source_doc: |
 
   The detectors in this module are based on metrics reported by the following monitors:
 
-  * [kubelet-stats](https://docs.signalfx.com/en/latest/integrations/agent/monitors/kubelet-stats.html)
+  * [kubelet-metrics](https://docs.signalfx.com/en/latest/integrations/agent/monitors/kubelet-metrics.html) for Kubernetes `>= 1.18`
+  * [kubelet-stats](https://docs.signalfx.com/en/latest/integrations/agent/monitors/kubelet-stats.html) for Kubernetes `< 1.18
   * [kubernetes-cluster](https://docs.signalfx.com/en/latest/integrations/agent/monitors/kubernetes-cluster.html)
 
   [Others](https://docs.signalfx.com/en/latest/integrations/kubernetes/k8s-monitors-observers.html#monitors-observers) 
@@ -32,10 +35,36 @@ source_doc: |
 
   ### Examples
 
-  Here is a sample configuration fragment for the SignalFx agent for GKE:
+  Here is a sample configuration fragment for SignalFx Agent with `kubernetes-cluster` monitor:
 
   ```yaml
   monitors:
+  - type: kubernetes-cluster
+    extraMetrics:
+      - kubernetes.job.completions
+      - kubernetes.job.active
+      - kubernetes.job.succeeded
+      - kubernetes.stateful_set.ready
+      - kubernetes.stateful_set.desired
+  ```
+
+  You can replace `kubernetes-cluster` with `openshift-cluster` you monitor Openshift Kubernetes.
+
+  Then add the monitor `kubelet-metrics` for Kubernetes version `>= 1.18`. Example for GKE:
+
+  ```yaml
+  - type: kubelet-metrics
+    kubeletAPI:
+      authType: serviceAccount
+    usePodsEndpoint: true
+  ```
+
+  __Note__: `usePodsEndpoint: true` allows to enhance containers metrics with `container_id` dimension.
+
+  If you use a Kubernetes version `< 1.18` you have to replace `kubelet-metrics` monitor by `kubelet-stats`.
+  Example for GKE:
+
+  ```yaml
   - type: kubelet-stats
     kubeletAPI:
       authType: serviceAccount
@@ -47,21 +76,12 @@ source_doc: |
       metricNames:
         - '*'
         - '!*network*'
-
-  - type: kubernetes-cluster
-    extraMetrics:
-      - kubernetes.job.completions
-      - kubernetes.job.active
-      - kubernetes.job.succeeded
-      - kubernetes.stateful_set.ready
-      - kubernetes.stateful_set.desired
   ```
 
   Using the SignalFx [Helm](https://helm.sh/) [chart](https://github.com/signalfx/signalfx-agent/tree/master/deployments/k8s/helm/signalfx-agent)
   could ease the agent installation and configuration:
 
   ```yaml
-
   # Increase depending on your use case
   resources:
     limits:
@@ -95,7 +115,7 @@ source_doc: |
   # Required to use "kubernetes-volumes" module
   gatherVolumesMetrics: true
 
-  # Required to use "kubernetes-ingress-nginx" module
+  # Example of optional monitors to add for more cool metrics
   monitors:
     - type: prometheus-exporter
       discoveryRule: container_image =~ "nginx-ingress-controller" && port == 10254
