aws_efs: bunch of enhancements
- some cosmetic improvements (adding id, renaming files..)
- improve readme notes for filtering and detectors
- fix read/write detectors using `TotalIOBytes`
- lower thresholds because they are not availability alerts
- add permitted throughput detector
- add burst credit balance detector

--- a/modules/integration_aws-efs/conf/01-used-space.yaml
+++ b/modules/integration_aws-efs/conf/01-used-space.yaml
@@ -9,7 +9,7 @@ signals:
     filter: "filter('StorageClass', 'Total') and filter('stat', 'mean')"
   signal:
     formula:
-      used_space.scale(0.000000000931323)
+      used_space.scale(0.000000000931323) # 1/1024^3
 rules:
   critical:
     comparator: ">"
