--- a/modules/integration_aws-vpn/conf/readme.yaml
+++ b/modules/integration_aws-vpn/conf/readme.yaml
@@ -1,3 +1,15 @@
 documentations:
   - name: CloudWatch metrics
     url: 'https://docs.aws.amazon.com/vpn/latest/s2svpn/monitoring-cloudwatch-vpn.html'
+notes: |
+  ### About filtering
+
+  Unlike other AWS services, the tags defined by user on VPN are not fetched by SignalFx AWS
+  integration as dimensions. This is why we cannot filter on [the aws tagging
+  convention](https://github.com/claranet/terraform-signalfx-detectors/wiki/Tagging-convention#aws).
+
+  Instead, we use the dimension `VpnId` as default filtering policy which allow you to
+  specify an VPN to monitor from `vpn_id` variable. In this case, you could have to leverage [multiple
+  instances](https://github.com/claranet/terraform-signalfx-detectors/wiki/Guidance#Multiple-instances)
+  of this module to monitor different VPN providing different value for this `vpn_id`. Else, its
+  default value `*` will monitor all VPN.
